# training-framework-comparison-tutorial

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build-images.yml  ci.yml
configs/dpo/: _base.yaml  _smoke_nemo-rl_gpu.yaml  _smoke_trl_gpu.yaml  _smoke_unsloth_gpu.yaml  qwen3-8b_ultrafeedback__nemo-rl__full.yaml  qwen3-8b_ultrafeedback__nemo-rl__lora.yaml  qwen3-8b_ultrafeedback__trl__full.yaml  qwen3-8b_ultrafeedback__trl__lora.yaml  qwen3-8b_ultrafeedback__unsloth__full.yaml  qwen3-8b_ultrafeedback__unsloth__lora.yaml
configs/grpo/: _base.yaml  _smoke_nemo-rl_gpu.yaml  _smoke_trl_gpu.yaml  _smoke_unsloth_gpu.yaml  (+12 more)
docker/: base.Dockerfile  megatron-bridge.Dockerfile  megatron-lm.Dockerfile  nemo-rl.Dockerfile  slime.Dockerfile  torchtitan-rl.Dockerfile  torchtitan.Dockerfile  trl.Dockerfile  unsloth.Dockerfile  verl.Dockerfile
pipelines/: qwen3-8b.yaml
sky/: dpo.nemo-rl.sky.yaml  dpo.trl.sky.yaml  dpo.unsloth.sky.yaml  grpo.megatron-lm.sky.yaml  grpo.nemo-rl.sky.yaml  grpo.slime.sky.yaml  grpo.torchtitan.sky.yaml  grpo.trl.sky.yaml  grpo.unsloth.sky.yaml  grpo.verl.sky.yaml  hf_torchrun_launch.sh  online_dpo.trl.sky.yaml  ppo.nemo-rl.sky.yaml  ppo.slime.sky.yaml  ppo.verl.sky.yaml  pretrain.megatron-lm.continued.sky.yaml  pretrain.megatron-lm.sky.yaml  pretrain.torchtitan.sky.yaml  ray_bootstrap.sh  sft.megatron-bridge.sky.yaml  sft.megatron-lm.sky.yaml  sft.nemo-rl.sky.yaml  sft.slime.sky.yaml  sft.torchtitan.sky.yaml  sft.trl.sky.yaml  sft.unsloth.sky.yaml  sft.verl.sky.yaml
tests/: test_adapters.py  test_chat_template.py  test_config.py  test_dist.py  test_pipeline.py  test_smoke.py
(+91 files in other folders)
